# misis2026s-25-03-tabakov-m-e

./: CMakeLists.txt  status.md
prj.labs/: CMakeLists.txt
prj.labs/DioStrB/: CMakeLists.txt  dio.hpp
prj.labs/arrayd/: arrayd.cpp  arrayd.hpp
prj.labs/bitsetd/: CMakeLists.txt  bitsetd.cpp  bitsetd.hpp  bitsettest.cpp
prj.labs/complex/: complex.cpp  complex.hpp
prj.labs/dio/: CMakeLists.txt  dio.cpp  dio.hpp
prj.labs/queuea/: queuea.cpp  queuea.hpp
prj.labs/queuel/: queuel.cpp
prj.labs/rational/: rational.cpp  rational.hpp
prj.labs/stacka/: stacka.cpp  stacka.hpp
prj.labs/stackl/: stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_test.cpp  bitsetd_io_test.cpp  bitsetd_profiler.cpp  bitsetd_test.cpp  complex_test.cpp  queuea_test.cpp  rational_test.cpp  read_test.txt  stacka_test.cpp  stackl_test.cpp  tester.cpp
